# SMART-QSO

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  RALPH.md  README.md  SECURITY.md
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml  flight-software-ci.yml
docs/: ARCHITECTURE.md  BEACON_SPEC.md  CUBESAT_SURVEY.md  ENVIRONMENT.md  EXECUTIVE_SUMMARY.md  FAIRNESS.md  ML_MODELS.md  ORBITAL_ACCESS.md  REGULATORY.md  RF_PLAN.md
docs/compliance/: CDS_COMPLIANCE_MATRIX.md  EXPORT_CONTROL.md  LAUNCH_PROVIDER_ICD.md  MATERIALS_LIST.md  ORBITAL_DEBRIS_ASSESSMENT.md
docs/development/: BRANCHING_STRATEGY.md  CODE_REVIEW_CHECKLIST.md  CODING_STANDARDS.md  COMMIT_MESSAGES.md  RELEASE_PROCEDURE.md
docs/environment/: DATA_BUDGET.md  ENVIRONMENTAL_TEST_PLAN.md  LINK_BUDGET_ANALYSIS.md  MASS_BUDGET.md  ORBIT_ANALYSIS.md  POWER_BUDGET_ANALYSIS.md  RADIATION_ANALYSIS.md  RELIABILITY_ANALYSIS.md  THERMAL_ANALYSIS.md
docs/ground/: GROUND_STATION_DESIGN.md  GROUND_STATION_OPERATIONS_MANUAL.md
docs/hardware/: ADCS_DESIGN.md  EPS_DESIGN.md  HARDWARE_DEVELOPMENT_PLAN.md  OBC_DESIGN.md  PARTS_LIST.md  PAYLOAD_DESIGN.md  RF_DESIGN.md
docs/integration/: ANOMALY_RESOLUTION.md  ASSEMBLY_PROCEDURE.md  CONTAMINATION_CONTROL_PLAN.md  FLATSAT_CONFIGURATION.md  INTEGRATION_PLAN.md  PRE_SHIP_CHECKLIST.md  TEST_DATA_MANAGEMENT.md
docs/interfaces/: ICD_BEACON_FORMAT.md  ICD_OBC_ADCS.md  ICD_OBC_EPS.md  ICD_OBC_JETSON.md  ICD_OBC_RF.md  ICD_SPACE_GROUND.md  INTERFACE_CONTROL_MASTER.md  INTERFACE_VERIFICATION_PLAN.md
docs/manufacturing/: EEE_PARTS_LIST.md  WORKMANSHIP_PLAN.md  WORKMANSHIP_STANDARDS.md
docs/mission/: MISSION_SUCCESS_CRITERIA.md
docs/operations/: ANOMALY_REPORT_TEMPLATE.md  AS_RUN_PROCEDURE_TEMPLATE.md  CMD_TLM_DATABASE.md  COMMAND_DICTIONARY.md  COMMISSIONING_PLAN.md  CONTINGENCY_PROCEDURES.md  END_OF_LIFE_PLAN.md  LAUNCH_CAMPAIGN_CHECKLIST.md  LAUNCH_SITE_OPS.md  MISSION_OPERATIONS_PLAN.md  MISSION_RULES.md  MISSION_TIMELINE.md  OPERATOR_TRAINING_MATERIALS.md  OPERATOR_TRAINING_PLAN.md  SOFTWARE_ROLLBACK_PROCEDURES.md  TELEMETRY_DICTIONARY.md
docs/pdr/: AI-PDR-FEEDBACK.md  SMART-QSO_PDR.md
docs/project/: CONFIGURATION_MANAGEMENT_PLAN.md  HARDWARE_READINESS_TRACKER.md  HERITAGE_ASSESSMENT.md  LESSONS_LEARNED.md  MISSION_ASSURANCE_PLAN.md  PROJECT_PLAN.md  SEMP.md
docs/regulatory/: IARU_COORDINATION.md  SPECTRUM_LICENSE.md
docs/requirements/: MISSION_REQUIREMENTS.md  REQUIREMENTS_TRACEABILITY.md  SYSTEM_REQUIREMENTS.md
docs/reviews/: CDR_PACKAGE.md  CDR_STATUS_SUMMARY.md  CONFIGURATION_AUDIT_CHECKLIST.md  CONFIGURATION_AUDIT_CHECKLISTS.md  FLIGHT_READINESS_REVIEW.md  FLIGHT_SOFTWARE_DELIVERY.md  FORMAL_INSPECTION_REPORT.md  KNOWN_ISSUES.md  LAUNCH_READINESS_REVIEW.md  MISSION_OPERATIONS_REVIEW.md  PDR_PACKAGE.md  POST_ENVIRONMENTAL_REVIEW.md  PRE_ENVIRONMENTAL_REVIEW.md  SAFETY_REVIEW.md  SOFTWARE_VERSION_DESCRIPTION.md  SYSTEM_REQUIREMENTS_REVIEW.md  TEST_READINESS_REVIEW.md  VERIFICATION_VALIDATION_PACKAGE.md
docs/safety/: SAFETY_DATA_PACKAGE.md  SOFTWARE_FMEA.md  SOFTWARE_HAZARD_ANALYSIS.md  SOFTWARE_SAFETY_PLAN.md
docs/software/: BUILD_CONFIGURATIONS.md  CONFIGURATION_INDEX.md  ROLLBACK_RECOVERY_PROCEDURES.md  SOFTWARE_DESIGN.md  SOFTWARE_DEVELOPMENT_PLAN.md  SOFTWARE_MAINTENANCE_PLAN.md  SOFTWARE_REQUIREMENTS.md  SOFTWARE_TEST_PLAN.md  SOFTWARE_VERSION_DESCRIPTION.md
hardware/: README.md
mission/: CONOPS.md  RISK_REGISTER.md  SCHEDULE.md  VNV_PLAN.md
software/: README.md
software/flight/: .clang-format  .clang-tidy  .cppcheck  CMakeLists.txt  Doxyfile  ENHANCEMENTS_SUMMARY.md  UART_TELEMETRY.md  sensors.yaml
software/flight/docs/: AUTONOMY_DESIGN.md  BOOTLOADER_REQUIREMENTS.md  FDIR_DESIGN.md  INCLUDE_DEPENDENCIES.md  JPL_POWER_OF_TEN_AUDIT.md  LOOP_BOUNDS.md  MEMORY_POLICY.md  MISRA_DEVIATIONS.md  NAMING_CONVENTION.md  RADIATION_MITIGATION.md  README.md  RTOS_ARCHITECTURE.md  TIME_MANAGEMENT.md  TIMING_ANALYSIS.md
software/flight/include/: adcs_control.h  assert_handler.h  beacon.h  cmd_handler.h  deployment.h  eps_control.h  fault_mgmt.h  flight_log.h  input_validation.h  mission_data.h  safe_string.h  scheduler.h  sensors.h  smart_qso.h  state_machine.h  system_init.h  system_state.h  telemetry.h  uart_comm.h  watchdog_mgr.h  yaml_parser.h
software/flight/include/hal/: hal.h  hal_adc.h  hal_flash.h  hal_gpio.h  hal_i2c.h  hal_spi.h  hal_timer.h  hal_uart.h  hal_wdt.h
software/flight/scripts/: check_complexity.sh  coverage.sh  run_analysis.sh  verify_build.sh
software/flight/src/: adcs_control.c  assert_handler.c  beacon.c  cmd_handler.c  crc32.c  deployment.c  eps_control.c  fault_mgmt.c  flight_log.c  input_validation.c  main.c  mission_data.c  safe_string.c  scheduler.c  sensors.c  state_machine.c  system_init.c  system_state.c  telemetry.c  time_utils.c  uart_comm.c  watchdog_mgr.c  yaml_parser.c
software/flight/src/hal/: hal_sim.c
software/flight/tests/: CMakeLists.txt  CMakeLists_simple.txt  IMPLEMENTATION_SUMMARY.md  README.md  test_adcs.c  test_assert_handler.c  test_beacon.c  test_crc32.c  test_deployment.c  test_eps_control.c  test_fault_mgmt.c  test_flight_log.c  test_input_validation.c  test_main.c  test_main_simple.c  test_mission_data.c  test_safe_string.c  test_scheduler.c  test_sensors.c  test_state_machine.c  test_system_init.c  test_system_state.c  test_telemetry.c  test_telemetry_flow.c  test_uart_comm.c  test_watchdog_mgr.c
software/flight/tests/hil/: HIL_TEST_PLAN.md
software/flight/tests/integration/: test_fault_scenarios.c  test_mode_transitions.c  test_system_startup.c
software/flight/tests/regression/: REGRESSION_TESTS.md  test_regression_suite.c
software/payload/: README.md  agent.py  formatter.py  health_interface.py  llama_runner.py  pyproject.toml  supervisor.py
software/payload/ansible/: deploy_payload.yml
software/payload/testdata/: health_sample.jsonl
software/payload/tests/: test_agent.py  test_formatter.py  test_health_interface.py  test_integration.py  test_llama_runner.py  test_supervisor.py
(+97 files in other folders)
